# csad2526KI409HarvatDmytro05

./: .gitignore  CMakeLists.txt  README.md  ci.bat  ci.sh
.github/workflows/: ci.yml
Lab1/tests/: unit_tests.cpp
Lab2/: build.ps1  i2c_master.vhd  i2c_slave.vhd  tb_i2c.vhd
